# palette

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md  palette.c  palette_config.h.in
